--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,10 @@
         "psr-4": {
             "Template\\": "assets/"
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.0.x-dev"
+        }
     }
 }
