--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
             "email": "17763768@qq.com"
         }
     ],
+    "minimum-stability": "stable",
     "require": {
         "yiisoft/yii2": "~2.0.6"
     },
