--- a/composer.json
+++ b/composer.json
@@ -18,4 +18,9 @@
             "Template\\": "assets/"
         }
     }
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.0.x-dev"
+        }
+    }
 }
