--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "autoload": {
         "psr-4": {
             "wm00689\\template\\": "assets/",
-            "wm00689\\admin\\": "assets/"
+            "wm00689\\admin\\": "admin/"
         }
     }
 }
